--- a/css/main.css
+++ b/css/main.css
@@ -122,23 +122,48 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+nav {
+  background-color: #5a7591; }
+  nav button, nav a {
+    color: #fafafb; }
+
 header {
   background-color: #5a7591; }
 
 footer {
   background-color: #5a7591;
-  color: whitesmoke;
-  text-decoration: none; }
-  footer .about-footer {
-    text-decoration: none; }
+  color: #fafafb;
+  text-decoration: none;
+  padding-bottom: 20px; }
   footer .container {
-    padding-top: 20px;
     display: grid;
+    padding-top: 20px;
     grid-template-columns: 20% 20% 30% 30%;
-    grid-template-rows: 40% 60%; }
+    grid-template-rows: 50% 50%; }
+  footer a {
+    text-decoration: none;
+    color: white;
+    padding: 3px; }
+
+.about-footer {
+  grid-template-rows: 1/3; }
+
+.cart-footer {
+  grid-template-rows: 1/3; }
+
+.social-footer {
+  align-self: end;
+  text-align: start;
+  padding-left: 20px; }
+
+.contact-us-footer {
+  text-align: center;
+  padding-left: 100px; }
 
 .contact li {
-  display: inline; }
+  display: inline;
+  align-content: space-between;
+  padding: 3px; }
 
 .map {
   grid-row: 2/2;
