--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,4 +12,9 @@ $body-font: Arial, Helvetica, Sans-Serif;
 //padding
 $padding:3px;
 
+//Media Query Widths
+
+$tabletLandscape: 1024px;
+$phoneLandscape: 670px;
+
 
