--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,12 +1,11 @@
 footer {
     background-color: $dark-color;
     color: $lightest-color;
-    text-decoration: none;
-    padding-bottom: 20px;
+    padding-bottom: 1%;
    
     .container {
         display: grid;
-        padding-top: 20px;
+        padding-top: 1%;
         grid-template-columns: 20% 20% 30% 30%;
         grid-template-rows: 50% 50%;
     }
@@ -20,33 +19,34 @@ footer {
    
 }
 
-.about-footer{
-    grid-template-rows: 1/3;
-    
-}
 
 .cart-footer{
-    grid-template-rows: 1/3;
+    text-align: start;
+    padding-left: 20%;
 }
 
 .social-footer{
-    align-self: end;
+    align-self: start;
     text-align: start;
-    padding-left: 20px;
+    padding-left: 30%;
 }
 .contact-us-footer{
     text-align: center;
-    padding-left: 100px;
+    padding-left: 8%;
 }
 
 .contact li {
     display: inline;
-    align-content: space-between;
-    padding: $padding;
 }
 
 .map {
     grid-row: 2/2;
     grid-column: 1/5;
     text-align: end;
+  
 }
+
+
+
+
+
