contact-us page styling

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -7,7 +7,7 @@ nav{
     
    a{
         color: $lightest-color;
-        font-weight: bold;
-        font-size: larger;
+        
+        font-size: large;
 }
 }
