--- a/css/main.css
+++ b/css/main.css
@@ -128,11 +128,25 @@ nav {
     font-size: 25px; }
   nav a {
     color: #fafafb;
-    font-weight: bold;
-    font-size: larger; }
+    font-size: large; }
 
 header {
   background-color: #5a7591; }
+
+form {
+  border: 1px;
+  padding: 2%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+  margin-left: 10%;
+  margin-right: 10%;
+  background-color: #d8dce4; }
+
+.form-button {
+  text-align: center; }
+
+h2 {
+  text-align: center; }
 
 footer {
   background-color: #5a7591;
