--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,8 +1,8 @@
 form{
     border: 1px;
-    padding: 2%;
-    margin-bottom: 2%;
-    margin-top: 2%;
+    padding: $padding1;
+    margin-bottom: $padding1;
+    margin-top: $padding1;
     margin-left: 10%;
     margin-right: 10%;
     background-color: $light-color;
