--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,18 +1,18 @@
 footer {
     background-color: $dark-color;
     color: $lightest-color;
-    padding-bottom: 1%;
+    padding-bottom: $padding1/2;
    
     .container {
         display: grid;
-        padding-top: 1%;
+        padding-top: $padding1/2;
         grid-template-columns: 20% 20% 30% 30%;
         grid-template-rows: 50% 50%;
     }
 
     a{
         text-decoration: none;
-        color: white;
+        color:$lightest-color;
         padding: $padding;
     }
 
