--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,3 +1,19 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.checkout-form{
+    display: grid;
+    grid-template-rows: 3% 40% 50% 7%;
+
+}
+
+.form1{
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.form2{
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
