--- a/css/main.css
+++ b/css/main.css
@@ -137,21 +137,24 @@ body {
   display: grid;
   grid-template-rows: 5% 40% 45% 10%; }
 
-.Billing_Contact {
+.check1, .check2, .check3, .check4 {
+  padding: 30px; }
+
+.Billing_header {
   border-bottom: 1px solid black; }
-
-.form1 {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  margin-top: 10px; }
-
-.form2 {
-  display: grid;
-  grid-template-columns: 50% 50%; }
 
 .pay_now {
   border-top: 1px solid black; }
 
+@media screen and (min-width: 1024px) {
+  .form1 {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin-top: 10px; }
+
+  .form2 {
+    display: grid;
+    grid-template-columns: 50% 50%; } }
 .banner {
   margin-top: 63px; }
 
