--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -8,22 +8,34 @@ body{
 
 }
 
-.Billing_Contact{
+.check1, .check2, .check3, .check4{
+    padding:30px;
+}
+
+
+
+.Billing_header{
     border-bottom: 1px solid black;
 }
 
-.form1{
 
-    display: grid;
-    grid-template-columns: 50% 50%;
-    margin-top: 10px;
-}
-
-.form2{
-    display: grid;
-    grid-template-columns: 50% 50%;
-}
 
 .pay_now{
     border-top: 1px solid black;
+}
+
+
+@media screen and (min-width:$tabletLandscape){
+    .form1{
+
+        display: grid;
+        grid-template-columns: 50% 50%;
+        margin-top: 10px;
+    }
+    
+    .form2{
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+
 }
