edited, updated and added content to book page

--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,10 @@ body {
   display: grid;
   grid-template-rows: 5% 40% 45% 10%; }
 
-.check1, .check2, .check3, .check4 {
+.check1,
+.check2,
+.check3,
+.check4 {
   padding: 30px; }
 
 .Billing_header {
@@ -156,7 +159,8 @@ body {
     display: grid;
     grid-template-columns: 50% 50%; } }
 .banner {
-  margin-top: 63px; }
+  padding-left: 0px;
+  padding-right: 0px; }
 
 header {
   background-color: #5a7591; }
@@ -175,6 +179,10 @@ form {
 
 h2 {
   text-align: center; }
+
+.login-form {
+  display: grid;
+  align-items: center; }
 
 footer {
   background-color: #5a7591;
