--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: red;
 }
 
 .checkout-form {
@@ -32,4 +33,8 @@ body {
         display: grid;
         grid-template-columns: 50% 50%;
     }
+}
+
+.jumbotron {
+    background-color: $dark-color;
 }
