Follow us icons aligned

--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,8 @@ footer {
     padding: 3px; }
   footer .map {
     text-align: center; }
+  footer .copyright {
+    margin-top: 10px; }
 
 @media screen and (min-width: 670px) {
   footer .container {
