--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,3 +1,4 @@
+//contact us form
 form {
     border: 1px;
     padding: $padding1;
@@ -19,4 +20,38 @@ h2 {
 .login-form {
     display: grid;
     align-items: center;
+}
+
+//checkout page 
+
+.checkout-form {
+    display: grid;
+    grid-template-rows: 5% 40% 45% 10%;
+}
+
+.check1,
+.check2,
+.check3,
+.check4 {
+    padding: 30px;
+}
+
+.Billing_header {
+    border-bottom: 1px solid black;
+}
+
+.pay_now {
+    border-top: 1px solid black;
+}
+
+@media screen and (min-width:$tabletLandscape) {
+    .form1 {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        margin-top: 10px;
+    }
+    .form2 {
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
 }
