--- a/css/main.css
+++ b/css/main.css
@@ -130,8 +130,41 @@ nav {
     color: #fafafb;
     font-size: large; }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: red; }
+
+.checkout-form {
+  display: grid;
+  grid-template-rows: 5% 40% 45% 10%; }
+
+.check1,
+.check2,
+.check3,
+.check4 {
+  padding: 30px; }
+
+.Billing_header {
+  border-bottom: 1px solid black; }
+
+.pay_now {
+  border-top: 1px solid black; }
+
+@media screen and (min-width: 1024px) {
+  .form1 {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin-top: 10px; }
+
+  .form2 {
+    display: grid;
+    grid-template-columns: 50% 50%; } }
+.jumbotron {
+  background-color: #5a7591; }
+
 .banner {
-  margin-top: 63px; }
+  padding-left: 0px;
+  padding-right: 0px; }
 
 header {
   background-color: #5a7591; }
@@ -151,39 +184,42 @@ form {
 h2 {
   text-align: center; }
 
+.login-form {
+  display: grid;
+  align-items: center; }
+
 footer {
   background-color: #5a7591;
   color: #fafafb;
-  padding-bottom: 1%; }
-  footer .container {
-    display: grid;
-    padding-top: 1%;
-    grid-template-columns: 20% 20% 30% 30%;
-    grid-template-rows: 50% 50%; }
+  padding-bottom: 1%;
+  padding-top: 1%; }
+  footer .about-footer ul, footer .cart-footer ul, footer h5, footer .social-footer ul, footer .contact-us-footer ul {
+    text-align: center; }
+  footer .about-footer li, footer .cart-footer li, footer .contact li, footer .social-footer li {
+    display: inline; }
   footer a {
     text-decoration: none;
     color: #fafafb;
     padding: 3px; }
+  footer .map {
+    text-align: center; }
 
-.cart-footer {
-  text-align: start;
-  padding-left: 20%; }
-
-.social-footer {
-  align-self: start;
-  text-align: start;
-  padding-left: 30%; }
-
-.contact-us-footer {
-  text-align: center;
-  padding-left: 8%; }
-
-.contact li {
-  display: inline; }
-
-.map {
-  grid-row: 2/2;
-  grid-column: 1/5;
-  text-align: end; }
+@media screen and (min-width: 670px) {
+  footer .container {
+    display: grid;
+    grid-template-columns: 20% 20% 30% 30%;
+    grid-template-rows: 50% 50%; }
+  footer .about-footer li, footer .cart-footer li {
+    display: block; }
+  footer .cart-footer {
+    padding-left: 20%; }
+  footer .social-footer {
+    padding-left: 30%; }
+  footer .contact-us-footer {
+    padding-left: 20%; }
+  footer .map {
+    grid-row: 2/2;
+    grid-column: 1/5;
+    text-align: end; } }
 
 /*# sourceMappingURL=main.css.map */
