--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,3 +1,40 @@
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: red;
+}
+
+.checkout-form {
+    display: grid;
+    grid-template-rows: 5% 40% 45% 10%;
+}
+
+.check1,
+.check2,
+.check3,
+.check4 {
+    padding: 30px;
+}
+
+.Billing_header {
+    border-bottom: 1px solid black;
+}
+
+.pay_now {
+    border-top: 1px solid black;
+}
+
+@media screen and (min-width:$tabletLandscape) {
+    .form1 {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        margin-top: 10px;
+    }
+    .form2 {
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+}
+
+.jumbotron {
+    background-color: $dark-color;
 }
